# iskra

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  capture-screenshots.sh  dev-build.sh  publish-flatpak.sh
.github/workflows/: ci.yml  release.yml
examples/: dnd_proto.rs
packaging/: cargo-sources.json  io.github.calstfrancis.Iskra.desktop  io.github.calstfrancis.Iskra.metainfo.xml  io.github.calstfrancis.Iskra.yml
screenshots/: demo-sermon.toml
src/: bible.rs  commands.rs  config.rs  error.rs  git_sync.rs  github_auth.rs  library.rs  main.rs  model.rs  rcl.rs  secret_store.rs  sermon_export.rs  sermon_templates.rs  state.rs  storage.rs
src/lectionary/: calendar.rs  catholic.rs  catholic_data.rs  mod.rs  narrative.rs  narrative_data.rs  rcl.rs  rcl_complementary_data.rs
src/ui/: app_window.rs  backup_setup.rs  changelog_window.rs  command_palette.rs  copy_movement_dialog.rs  dnd.rs  editor.rs  export_dialog.rs  github_signin.rs  history_window.rs  idea_row.rs  lectionary_panel.rs  library_window.rs  mod.rs  movement_card.rs  preached_before.rs  preaching_print.rs  preaching_view.rs  status_bar.rs  styles.rs  tag_popover.rs  theme.rs  title_date_popover.rs  welcome_window.rs
