[package]
name = "iskra"
version = "0.1.0-dev2"
edition = "2021"
license = "MIT"
description = "Sermon planning for preachers who work from structured notes"
homepage = "https://github.com/calstfrancis/iskra"
repository = "https://github.com/calstfrancis/iskra"

[dependencies]
gtk4 = { version = "0.7", features = ["v4_10"] }
libadwaita = { version = "0.5", features = ["v1_4"] }
glib = "0.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt"] }
tracing-appender = "0.2"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3"

[profile.dev]
debug = 1
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
strip = true
